[workspace]
# members = [ "cli","programs/*"]
members = ["programs/*", "virtual-curve-sdk"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.31"
anchor-spl = "0.31"
anchor-client = "0.31"