[package]
name = "virtual-curve-sdk"
version = "0.1.0"
edition = "2021"
description = "virtual curve sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "virtual_curve_sdk"

[dependencies]
anyhow = "1.0.71"
virtual-curve = { path = "../programs/virtual-curve" }
