[package]
name = "dynamic-vault"
version = "0.9.1"
description = "Created with Anchor"
edition = "2021"

[features]
cpi = []
no-entrypoint = []
localnet = []
devnet = []

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_vault"

[dependencies]
anchor-lang = { workspace = true }
anchor-gen = "0.3.1"
