[package]
name = "virtual-curve"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "virtual_curve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
local = []

[dependencies]
anchor-lang = { workspace = true, features = ["event-cpi"] }
anchor-spl = { workspace = true, features = [] }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
solana-program = { workspace = true }
static_assertions = "1.1.0"
ruint = "1.3.0"
num-traits = "0.2.19"
num_enum = "0.7.0"
num = "0.4.3"
spl-token-metadata-interface = { version = "=0.2.0" }
mpl-token-metadata = "3.2.3"
dynamic-amm = { path = "../dynamic-amm", features = ["no-entrypoint", "cpi"] }

[dev-dependencies]
proptest = "1.2.0"
